--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "vue": "^3.5.13"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.0.10",
     "@vitejs/plugin-vue": "^5.2.1",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.10",
     "vite": "^6.1.0",
     "vite-plugin-vue-devtools": "^7.7.2"
   }
